--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
